--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
   box-shadow: 10px grey 10px grey;
 }
 .App-logo {
-  animation: App-logo-spin infinite 20s linear;
+  animation: App-logo-spin infinite 2s linear;
   height: 40vmin;
 }
 
@@ -25,13 +25,14 @@
 
 .App-link {
   color: #61dafb;
+  color: palevioletred;
 }
 
-/* @keyframes App-logo-spin {
+@keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
   }
   to {
-    transform: rotate(360deg);
+    transform: rotate(100deg);
   }
-} */
+}
